Fixed bg in the way on mobile

--- a/css/container.css
+++ b/css/container.css
@@ -143,6 +143,10 @@ vl {
 
 @media (max-width: 1000px) {
 
+    #bgImg {
+        display: none;
+    }
+
     #navWide {
         display: none;
     }
